[gd_scene load_steps=9 format=2]

[ext_resource path="res://editor/level_editor.gd" type="Script" id=1]
[ext_resource path="res://ui/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://tiles/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://enemies/stalfos.png" type="Texture" id=4]
[ext_resource path="res://tiles/floor.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[node name="editor" type="Node2D"]

script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ui" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="current_tile" type="Label" parent="ui" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = -10.0
margin_right = 70.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "wall"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="run" type="Button" parent="ui" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 601.0
margin_top = -13.0
margin_right = 643.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "run"
flat = true
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65537, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, -65505, 0, 65537, -65504, 0, 65537, -65503, 0, 65537, -65502, 0, 65537, -65501, 0, 65537, -65500, 0, 65537, -65499, 0, 65537, -65498, 0, 65537, -65497, 0, 65537, -65496, 0, 65537, -65495, 0, 65537, -65494, 0, 65537, -65493, 0, 65537, -65492, 0, 65537, -65491, 0, 65537, -65490, 0, 65537, -65489, 0, 65537, -65488, 0, 65537, -65487, 0, 65537, -65486, 0, 65537, -65485, 0, 65537, -65484, 0, 65537, -65483, 0, 65537, -65482, 0, 65537, -65481, 0, 65537, -65480, 0, 65537, -65479, 0, 65537, -65478, 0, 65537, -65477, 0, 65537, -65476, 0, 65537, -65475, 0, 65537, -65474, 0, 65537, -65473, 0, 65537, -65472, 0, 65537, -65471, 0, 65537, -65470, 0, 65537, -65469, 0, 65537, -65468, 0, 65537, -65467, 0, 65537, -65466, 0, 65537, -65465, 0, 65537, -65464, 0, 65537, -65463, 0, 65537, -65462, 0, 65537, -65461, 0, 65537, -65460, 0, 65537, -65459, 0, 65537, -65458, 0, 65537, -65457, 0, 65537, -65456, 0, 65537, -65455, 0, 65537, -65454, 0, 65537, -65453, 0, 65537, -65452, 0, 65537, -65451, 0, 65537, -65450, 0, 65537, -65449, 0, 65537, -65448, 0, 65537, -65447, 0, 65537, -65446, 0, 65537, -65445, 0, 65537, -65444, 0, 65537, -65443, 0, 65537, -65442, 0, 65537, -65441, 0, 65537, -65440, 0, 65537, -65439, 0, 65537, -65438, 0, 65537, -65437, 0, 65537, -65436, 0, 65537, 65535, 0, 65537, 100, 0, 65537, 131071, 0, 65537, 65636, 0, 65537, 196607, 0, 65537, 131172, 0, 65537, 262143, 0, 65537, 196708, 0, 65537, 327679, 0, 65537, 262244, 0, 65537, 393215, 0, 65537, 327780, 0, 65537, 458751, 0, 65537, 393316, 0, 65537, 524287, 0, 65537, 458852, 0, 65537, 589823, 0, 65537, 524388, 0, 65537, 655359, 0, 65537, 589924, 0, 65537, 720895, 0, 65537, 655460, 0, 65537, 786431, 0, 65537, 720996, 0, 65537, 851967, 0, 65537, 786532, 0, 65537, 917503, 0, 65537, 852068, 0, 65537, 983039, 0, 65537, 917604, 0, 65537, 1048575, 0, 65537, 983140, 0, 65537, 1114111, 0, 65537, 1048676, 0, 65537, 1179647, 0, 65537, 1114212, 0, 65537, 1245183, 0, 65537, 1179748, 0, 65537, 1310719, 0, 65537, 1245284, 0, 65537, 1376255, 0, 65537, 1310820, 0, 65537, 1441791, 0, 65537, 1376356, 0, 65537, 1507327, 0, 65537, 1441892, 0, 65537, 1572863, 0, 65537, 1507428, 0, 65537, 1638399, 0, 65537, 1572964, 0, 65537, 1703935, 0, 65537, 1638500, 0, 65537, 1769471, 0, 65537, 1704036, 0, 65537, 1835007, 0, 65537, 1769572, 0, 65537, 1900543, 0, 65537, 1835108, 0, 65537, 1966079, 0, 65537, 1900644, 0, 65537, 2031615, 0, 65537, 1966180, 0, 65537, 2097151, 0, 65537, 2031716, 0, 65537, 2162687, 0, 65537, 2097252, 0, 65537, 2228223, 0, 65537, 2162788, 0, 65537, 2293759, 0, 65537, 2228324, 0, 65537, 2359295, 0, 65537, 2293860, 0, 65537, 2424831, 0, 65537, 2359396, 0, 65537, 2490367, 0, 65537, 2424932, 0, 65537, 2555903, 0, 65537, 2490468, 0, 65537, 2621439, 0, 65537, 2556004, 0, 65537, 2686975, 0, 65537, 2621540, 0, 65537, 2752511, 0, 65537, 2687076, 0, 65537, 2818047, 0, 65537, 2752612, 0, 65537, 2883583, 0, 65537, 2818148, 0, 65537, 2949119, 0, 65537, 2883684, 0, 65537, 3014655, 0, 65537, 2949220, 0, 65537, 3080191, 0, 65537, 3014756, 0, 65537, 3145727, 0, 65537, 3080292, 0, 65537, 3211263, 0, 65537, 3145828, 0, 65537, 3276799, 0, 65537, 3211364, 0, 65537, 3342335, 0, 65537, 3276900, 0, 65537, 3407871, 0, 65537, 3342436, 0, 65537, 3473407, 0, 65537, 3407972, 0, 65537, 3538943, 0, 65537, 3473508, 0, 65537, 3604479, 0, 65537, 3539044, 0, 65537, 3670015, 0, 65537, 3604580, 0, 65537, 3735551, 0, 65537, 3670116, 0, 65537, 3801087, 0, 65537, 3735652, 0, 65537, 3866623, 0, 65537, 3801188, 0, 65537, 3932159, 0, 65537, 3866724, 0, 65537, 3997695, 0, 65537, 3932260, 0, 65537, 4063231, 0, 65537, 3997796, 0, 65537, 4128767, 0, 65537, 4063332, 0, 65537, 4194303, 0, 65537, 4128868, 0, 65537, 4259839, 0, 65537, 4194404, 0, 65537, 4325375, 0, 65537, 4259940, 0, 65537, 4390911, 0, 65537, 4325476, 0, 65537, 4456447, 0, 65537, 4391012, 0, 65537, 4521983, 0, 65537, 4456548, 0, 65537, 4587519, 0, 65537, 4522084, 0, 65537, 4653055, 0, 65537, 4587620, 0, 65537, 4718591, 0, 65537, 4653156, 0, 65537, 4784127, 0, 65537, 4718641, 0, 0, 4718642, 0, 1, 4718643, 0, 1, 4718644, 0, 1, 4718645, 0, 1, 4718646, 0, 1, 4718647, 0, 1, 4718648, 0, 1, 4718649, 0, 1, 4718650, 0, 1, 4718651, 0, 1, 4718652, 0, 2, 4718692, 0, 65537, 4849663, 0, 65537, 4784177, 0, 65536, 4784178, 0, 3, 4784179, 0, 131073, 4784180, 0, 131073, 4784181, 0, 131073, 4784182, 0, 131073, 4784183, 0, 131073, 4784184, 0, 131073, 4784185, 0, 131073, 4784186, 0, 131073, 4784187, 0, 4, 4784188, 0, 65538, 4784228, 0, 65537, 4915199, 0, 65537, 4849713, 0, 65536, 4849714, 0, 65538, 4849723, 0, 65536, 4849724, 0, 65538, 4849764, 0, 65537, 4980735, 0, 65537, 4915249, 0, 65536, 4915250, 0, 65538, 4915259, 0, 65536, 4915260, 0, 65538, 4915300, 0, 65537, 5046271, 0, 65537, 4980785, 0, 65536, 4980786, 0, 65538, 4980790, 1, 0, 4980795, 0, 65536, 4980796, 0, 65538, 4980836, 0, 65537, 5111807, 0, 65537, 5046321, 0, 65536, 5046322, 0, 65538, 5046331, 0, 65536, 5046332, 0, 65538, 5046372, 0, 65537, 5177343, 0, 65537, 5111857, 0, 65536, 5111858, 0, 65538, 5111867, 0, 65536, 5111868, 0, 65538, 5111908, 0, 65537, 5242879, 0, 65537, 5177393, 0, 65536, 5177394, 0, 65538, 5177403, 0, 65536, 5177404, 0, 65538, 5177444, 0, 65537, 5308415, 0, 65537, 5242929, 0, 65536, 5242930, 0, 65539, 5242931, 0, 1, 5242932, 0, 1, 5242933, 0, 1, 5242934, 0, 1, 5242935, 0, 1, 5242936, 0, 1, 5242937, 0, 1, 5242938, 0, 1, 5242939, 0, 65540, 5242940, 0, 65538, 5242980, 0, 65537, 5373951, 0, 65537, 5308416, 0, 65537, 5308417, 0, 65537, 5308418, 0, 65537, 5308419, 0, 65537, 5308420, 0, 65537, 5308421, 0, 65537, 5308422, 0, 65537, 5308423, 0, 65537, 5308424, 0, 65537, 5308425, 0, 65537, 5308426, 0, 65537, 5308427, 0, 65537, 5308428, 0, 65537, 5308429, 0, 65537, 5308430, 0, 65537, 5308431, 0, 65537, 5308432, 0, 65537, 5308433, 0, 65537, 5308434, 0, 65537, 5308435, 0, 65537, 5308436, 0, 65537, 5308437, 0, 65537, 5308438, 0, 65537, 5308439, 0, 65537, 5308440, 0, 65537, 5308441, 0, 65537, 5308442, 0, 65537, 5308443, 0, 65537, 5308444, 0, 65537, 5308445, 0, 65537, 5308446, 0, 65537, 5308447, 0, 65537, 5308448, 0, 65537, 5308449, 0, 65537, 5308450, 0, 65537, 5308451, 0, 65537, 5308452, 0, 65537, 5308453, 0, 65537, 5308454, 0, 65537, 5308455, 0, 65537, 5308456, 0, 65537, 5308457, 0, 65537, 5308458, 0, 65537, 5308459, 0, 65537, 5308460, 0, 65537, 5308461, 0, 65537, 5308462, 0, 65537, 5308463, 0, 65537, 5308464, 0, 65537, 5308465, 0, 131072, 5308466, 0, 131073, 5308467, 0, 131073, 5308468, 0, 131073, 5308469, 0, 131073, 5308470, 0, 131073, 5308471, 0, 131073, 5308472, 0, 131073, 5308473, 0, 131073, 5308474, 0, 131073, 5308475, 0, 131073, 5308476, 0, 131074, 5308477, 0, 65537, 5308478, 0, 65537, 5308479, 0, 65537, 5308480, 0, 65537, 5308481, 0, 65537, 5308482, 0, 65537, 5308483, 0, 65537, 5308484, 0, 65537, 5308485, 0, 65537, 5308486, 0, 65537, 5308487, 0, 65537, 5308488, 0, 65537, 5308489, 0, 65537, 5308490, 0, 65537, 5308491, 0, 65537, 5308492, 0, 65537, 5308493, 0, 65537, 5308494, 0, 65537, 5308495, 0, 65537, 5308496, 0, 65537, 5308497, 0, 65537, 5308498, 0, 65537, 5308499, 0, 65537, 5308500, 0, 65537, 5308501, 0, 65537, 5308502, 0, 65537, 5308503, 0, 65537, 5308504, 0, 65537, 5308505, 0, 65537, 5308506, 0, 65537, 5308507, 0, 65537, 5308508, 0, 65537, 5308509, 0, 65537, 5308510, 0, 65537, 5308511, 0, 65537, 5308512, 0, 65537, 5308513, 0, 65537, 5308514, 0, 65537, 5308515, 0, 65537, 5308516, 0, 65537 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="tile_preview" type="Sprite" parent="." index="2"]

modulate = Color( 1, 1, 1, 0.196078 )
z_index = 100
texture = ExtResource( 4 )
region_enabled = true
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="tile_area" type="Area2D" parent="tile_preview" index="0"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="tile_preview/tile_area" index="0"]

shape = SubResource( 3 )

[node name="camera" type="Camera2D" parent="." index="3"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]
__meta__ = {
"_edit_lock_": true
}

[node name="floor" type="Sprite" parent="." index="4"]

modulate = Color( 0.411765, 0.447059, 0.321569, 1 )
z_index = -100
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1600, 1296 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="ui/run" to="." method="_on_run_pressed"]


